<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC_Reader</string>
    <string name="nfcid">NFC tag content:</string>
    <string name="action_settings">Settings</string>
    <string name="name">Schülername:</string>
    <string name="error_detected">Error detected!</string>
    <string name="ok_writing">ok writing!</string>
    <string name="error_writing">Error writing!</string>
    <string name="ok_detection">Ok detection!</string>
    <string name="tagschuelerzuweisung">Tag zuweisen!</string>
    <string name="write">Modus wechseln</string>
    <string name="schueler">Schüler: </string>
    <string name="id">Schüler-ID:</string>
    <string name="maxmuster">Max Mustermann</string>
    <string name="musterid"> - </string>
    <string name="title_activity_write__nfc">Write to NFC-Tag</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ready">Ready to Write!</string>
    <string name="title_activity_write_to_tag">WriteToTag</string>
    <string name="hello_world">Hello world!</string>
    <string name="zeit">Zeit:</string>
    <string name="musterzeit"> - </string>
    <string name="start">Startzeit: </string>
    <string name="stop">Stopzeit: </string>
    <string name="scannedTags">Gescannte NFC-Tags:</string>
    <string name="clear">Löschen</string>

</resources>
