<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="net.gymhark.MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                      android:orientation="vertical" >
                    
                      <TextView
        				android:id="@+id/textView1"
        				android:layout_width="wrap_content"
       					android:layout_height="wrap_content"
        				android:layout_marginLeft="20dp"
        				android:layout_marginStart="20dp"
        				android:layout_marginTop="20dp"
        				android:text="@string/schueler" />

    				<EditText
       				 android:id="@+id/etSchueler"
        				android:layout_width="match_parent"
        				android:layout_height="wrap_content"
        				android:layout_marginLeft="20dp"
        				android:layout_marginStart="20dp"
        				android:layout_marginRight="20dp"
        				android:ems="10" >

        				<requestFocus />
    				</EditText>

    				<TextView
        				android:id="@+id/textView2"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_marginLeft="20dp"
        				android:layout_marginStart="20dp"
        				android:layout_marginTop="10dp"
        				android:text="@string/id" />

    				<EditText
        				android:id="@+id/etId"
        				android:layout_width="match_parent"
        				android:layout_height="wrap_content"
        				android:layout_marginLeft="20dp"
        				android:layout_marginRight="20dp"
        				android:ems="10"
        				android:enabled="true" />

    				<Button
        				android:id="@+id/btnZuweisen"
        				android:layout_width="wrap_content"
        				android:layout_height="wrap_content"
        				android:layout_marginLeft="20dp"
        				android:layout_marginStart="20dp"
        				android:layout_marginTop="10dp"
        				android:text="@string/tagschuelerzuweisung" />
                    
                    
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >
    				
                    <include layout="@layout/tab2" />
                    
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

  

</LinearLayout>